--- a/style.css
+++ b/style.css
@@ -29,6 +29,18 @@ h3 {
     font-family: var(--heading);
 }
 
+#header-container,
+#hero-container,
+#about-container,
+#services-container,
+#testimonials-container,
+#contact-container {
+    width: 100%;
+    max-width: 100rem;
+    /* border: 1px solid red; */
+    margin: auto;
+}
+
 /* Buttons */
 
 button {
@@ -58,7 +70,9 @@ button.alt {
 header {
     color: var(--secondary-accent-color);
     background-color: var(--primary-color);
+}
 
+#header-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -91,10 +105,11 @@ header > h1 {
 #hero {
     color: var(--secondary-accent-color);
     background-color: var(--primary-color);
+}
+
+#hero-container {
     display: flex;
     align-items: center;
-
-    padding: 1rem;
 }
 
 #hero-content {
@@ -117,15 +132,27 @@ header > h1 {
 
 #hero-image-container {
     flex: 1;
+    width: 100%;
+}
+
+#hero-image-container > img {
+    max-height: 45rem;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    
 }
 
 /* About */
 
 #about {
     background-color: var(--secondary-accent-color);
-    display: flex;
 
     padding: 2rem;
+}
+
+#about-container {
+    display: flex;
 }
 
 #about-image-container {
@@ -153,7 +180,7 @@ header > h1 {
     padding: 1rem;
 }
 
-#services-container {
+#services-cards-container {
     display: flex;
     gap: 1rem;
 }
@@ -200,7 +227,7 @@ header > h1 {
     padding: 1rem;
 }
 
-#contact-container {
+#contact-content-container {
     display: flex;
     align-items: stretch;
     gap: 1rem;
