--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ h1,
 h2,
 h3 {
     font-family: var(--heading);
+    font-weight: 500;
 }
 
 #header-container,
@@ -37,7 +38,6 @@ h3 {
 #contact-container {
     width: 100%;
     max-width: 100rem;
-    /* border: 1px solid red; */
     margin: auto;
 }
 
@@ -45,6 +45,7 @@ h3 {
 
 button {
     cursor: pointer;
+    font-size: 1rem;
     padding: 0.5rem 1rem;
     border-radius: 0.5rem;
 }
@@ -140,7 +141,6 @@ header > h1 {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    
 }
 
 /* About */
