--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ h3 {
     font-weight: 500;
 }
 
+h2 {
+    font-size: 2.5rem;
+}
+
 #header-container,
 #hero-container,
 #about-container,
@@ -146,17 +150,25 @@ header > h1 {
 /* About */
 
 #about {
+    color: var(--text-color);
     background-color: var(--secondary-accent-color);
-
     padding: 2rem;
 }
 
 #about-container {
     display: flex;
+    gap: 1rem;
 }
 
 #about-image-container {
     flex: 1;
+}
+
+#about-image-container > img {
+    width: 100%;
+    height: 20rem;
+
+    object-fit: cover;
 }
 
 #about-content {
@@ -174,7 +186,10 @@ header > h1 {
     gap: 1rem;
 }
 
+/* Services */
+
 #services {
+    color: var(--text-color);
     text-align: center;
     background-color: var(--background-color);
     padding: 1rem;
@@ -205,6 +220,8 @@ header > h1 {
     font-family: var(--heading);
 }
 
+/* Testimonials */
+
 #testimonials {
     background-color: var(--secondary-accent-color);
 
@@ -222,7 +239,10 @@ header > h1 {
     font-weight: 600;
 }
 
+/* Contact */
+
 #contact {
+    color: var(--text-color);
     background-color: var(--background-color);
     padding: 1rem;
 }
