--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ header > h1 {
 
 #about-container {
     display: flex;
-    gap: 1rem;
+    gap: 2rem;
 }
 
 #about-image-container {
@@ -168,6 +168,7 @@ header > h1 {
 }
 
 #about-image-container > img {
+    display: block;
     width: 100%;
     height: 20rem;
 
@@ -189,6 +190,11 @@ header > h1 {
     gap: 1rem;
 }
 
+.icons-container  li {
+    display: flex;
+    gap: .5rem;
+}
+
 /* Services */
 
 #services {
@@ -208,6 +214,10 @@ header > h1 {
     border-radius: 0.5rem;
     padding: 1rem;
     margin: 1rem 0;
+}
+
+.service-card > h3 {
+    font-size: 1.5rem;
 }
 
 #call-to-action {
